app/assets/stylesheets/pages/assessments.sass
.greeting
  font-size: 36px
  font-weight: bold
  margin-bottom: 0px

.message
  margin-bottom: 20px

.row.row-action
  padding: 0px 15px
  margin-bottom: 40px
  .col-md-1
    background-color: #148da1
    text-align: center
    font-size: 37px
    line-height: 1.7em
    color:  #f7f9fa

  .col-md-11
    background-color: #f7f9fa
    color: #2a3a41
    text-align: left
    font-size: 36px
    line-height: 1.7em
    font-weight: bold
    border-bottom: 2px solid #dcdbd4
    &:hover
      box-shadow:  0px 2px 0px #d4d2c8
      background-color: #e5f1f5


.row.row-assessment
  padding: 0px 15px
  margin-bottom: 15px
  .col-md-1
    padding: 10px 0px
    min-height: 65px
    p
      color:  #f7f9fa
      text-transform: uppercase
      text-align: center
      margin-bottom: 5px
      line-height: 1em
      font-weight: 300
      &.assessment-type
        font-size:  18px
      &.assessment-stat
        font-size: 32px

  a#row-link
    .col-md-9
      &:hover
        box-shadow:  0px 2px 0px #d4d2c8
        background-color:  #e5f1f5

      min-height: 65px
      background-color: #f7f9fa
      border-bottom: 2px solid #dcdbd4
      padding-top: 5px
      p
        color: #2a3a41
        text-align: left
        &.assessment-name
          font-size: 26px
          line-height: 1.4em
          font-weight: bold
          margin-bottom: 0px

        &.assessment-stat
          font-size: 20px
          .category
            font-weight: 300
            margin-right: 5px
          .stat
            font-weight: bold


    &.disabled
      .col-md-9
        &:hover
          cursor: default
          box-shadow:  none
          background-color:  #f7f9fa


  .col-md-2
    padding: 0em
    .links
      a
        display: block
        width: 100%
        padding:  2px 5px 2px 10px
        font-size: 1em
        font-weight: 300
        background-color:  #b1bbbf
        border-bottom: 1px solid white
        color: white
        margin-bottom: 0px
        i
          color: white
        &:last-child
          border-bottom: 2px solid #dcdbd4
        &.active
          background-color:  #4a5e67
          &:hover
            color: #4a5e67
            background-color: #eaf0f2
            text-decoration: none
            i
              color: #4a5e67
        &.disabled
          &:hover
            cursor: default
            text-decoration: none


.row.row-assessment-addon
  padding: 0px 15px
  margin-top: -15px

  .col-md-1
    min-height: 42px !important
    text-align: center
    img
      margin-top: 7px

  .col-md-11
    min-height: 42px !important
    background-color: #ebebe8
    border-bottom: 2px solid #dcdbd4
    padding-top: 0px

    .media

      p.subheading-text
        margin-top: 8px
        margin-right: 8px
      .media-title
        margin-top:  10px
        font-weight: 300
      .media-object
        margin-top:  6px
      p.inviter-name
        margin-bottom:  0px
        font-size:  16px
        font-weight:  bold
        color:  #8b1b2f
        text-align: left
      p.inviter-bio
        margin: -3px 0px 0px
        font-size:  12px
        text-align: left

.tooltip
  .tooltip-arrow
    border-bottom-color: white !important
  .tooltip-inner
    background-color: white
    box-shadow: 0px 0px 10px #86857f
    -webkit-box-shadow: 0px 0px 10px #86857f
    -moz-box-shadow: 0px 0px 10px #86857f

  p.name
    text-align:center
    margin-bottom: 0px
    font-weight: bold
    color: #990025
    font-size: 17px
    white-space: nowrap
  p.role
    text-align: center
    margin-bottom: 0px
    font-weight: bold
    color: #2d3a40
    font-size: 14px
    white-space: nowrap

